crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__last_suffixed_multiple.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-33,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 1),
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-15 Apply(
                @11-15 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @11-15 Defs(
                        Defs {
                            tags: [
                                Index(2147483648),
                            ],
                            regions: [
                                @11-15,
                            ],
                            space_before: [
                                Slice(start = 0, length = 0),
                            ],
                            space_after: [
                                Slice(start = 0, length = 0),
                            ],
                            spaces: [],
                            type_defs: [],
                            value_defs: [
                                AnnotatedBody {
                                    ann_pattern: @11-15 Identifier {
                                        ident: "#!2_stmt",
                                    },
                                    ann_type: @11-15 Apply(
                                        "",
                                        "Task",
                                        [
                                            @11-15 Record {
                                                fields: [],
                                                ext: None,
                                            },
                                            @11-15 Inferred,
                                        ],
                                    ),
                                    spaces_middle: [],
                                    body_pattern: @11-15 Identifier {
                                        ident: "#!2_stmt",
                                    },
                                    body_expr: @11-15 Var {
                                        module_name: "",
                                        ident: "foo",
                                    },
                                },
                            ],
                        },
                        @11-15 Var {
                            module_name: "",
                            ident: "#!2_stmt",
                        },
                    ),
                    @11-15 Closure(
                        [
                            @11-15 Underscore(
                                "#!stmt",
                            ),
                        ],
                        @20-24 Apply(
                            @20-24 Var {
                                module_name: "Task",
                                ident: "await",
                            },
                            [
                                @20-24 Defs(
                                    Defs {
                                        tags: [
                                            Index(2147483648),
                                        ],
                                        regions: [
                                            @20-24,
                                        ],
                                        space_before: [
                                            Slice(start = 0, length = 0),
                                        ],
                                        space_after: [
                                            Slice(start = 0, length = 0),
                                        ],
                                        spaces: [],
                                        type_defs: [],
                                        value_defs: [
                                            AnnotatedBody {
                                                ann_pattern: @20-24 Identifier {
                                                    ident: "#!1_stmt",
                                                },
                                                ann_type: @20-24 Apply(
                                                    "",
                                                    "Task",
                                                    [
                                                        @20-24 Record {
                                                            fields: [],
                                                            ext: None,
                                                        },
                                                        @20-24 Inferred,
                                                    ],
                                                ),
                                                spaces_middle: [],
                                                body_pattern: @20-24 Identifier {
                                                    ident: "#!1_stmt",
                                                },
                                                body_expr: @20-24 Var {
                                                    module_name: "",
                                                    ident: "bar",
                                                },
                                            },
                                        ],
                                    },
                                    @20-24 Var {
                                        module_name: "",
                                        ident: "#!1_stmt",
                                    },
                                ),
                                @20-24 Closure(
                                    [
                                        @20-24 Underscore(
                                            "#!stmt",
                                        ),
                                    ],
                                    @29-33 Var {
                                        module_name: "",
                                        ident: "baz",
                                    },
                                ),
                            ],
                            BangSuffix,
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
