crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__last_suffixed_single.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-26,
    ],
    space_before: [
        Slice { start: 0, length: 0 },
    ],
    space_after: [
        Slice { start: 0, length: 0 },
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @7-26 Apply(
                @7-26 Var {
                    module_name: "",
                    ident: "foo",
                },
                [
                    @12-17 Str(
                        PlainLine(
                            "bar",
                        ),
                    ),
                    @18-20 Record(
                        [],
                    ),
                    @21-26 Str(
                        PlainLine(
                            "baz",
                        ),
                    ),
                ],
                Space,
            ),
        ),
    ],
}
