crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__multiple_suffix.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-24,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 1),
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-16 Apply(
                @11-16 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @11-16 Defs(
                        Defs {
                            tags: [
                                Index(2147483648),
                            ],
                            regions: [
                                @11-16,
                            ],
                            space_before: [
                                Slice(start = 0, length = 0),
                            ],
                            space_after: [
                                Slice(start = 0, length = 0),
                            ],
                            spaces: [],
                            type_defs: [],
                            value_defs: [
                                AnnotatedBody {
                                    ann_pattern: @11-16 Identifier {
                                        ident: "#!1_stmt",
                                    },
                                    ann_type: @11-16 Apply(
                                        "",
                                        "Task",
                                        [
                                            @11-16 Apply(
                                                "",
                                                "Task",
                                                [
                                                    @11-16 Record {
                                                        fields: [],
                                                        ext: None,
                                                    },
                                                    @11-16 Inferred,
                                                ],
                                            ),
                                            @11-16 Inferred,
                                        ],
                                    ),
                                    lines_between: [],
                                    body_pattern: @11-16 Identifier {
                                        ident: "#!1_stmt",
                                    },
                                    body_expr: @11-16 Var {
                                        module_name: "",
                                        ident: "foo",
                                    },
                                },
                            ],
                        },
                        @11-16 Var {
                            module_name: "",
                            ident: "#!1_stmt",
                        },
                    ),
                    @11-16 Closure(
                        [
                            @11-16 Underscore(
                                "#!stmt",
                            ),
                        ],
                        @21-24 Var {
                            module_name: "",
                            ident: "bar",
                        },
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
