crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__nested_defs.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-49,
    ],
    space_before: [
        Slice { start: 0, length: 0 },
    ],
    space_after: [
        Slice { start: 0, length: 0 },
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-49 Defs(
                Defs {
                    tags: [
                        EitherIndex(2147483648),
                    ],
                    regions: [
                        @23-42,
                    ],
                    space_before: [
                        Slice { start: 0, length: 0 },
                    ],
                    space_after: [
                        Slice { start: 0, length: 0 },
                    ],
                    spaces: [],
                    type_defs: [],
                    value_defs: [
                        Body(
                            @11-12 Identifier {
                                ident: "x",
                            },
                            @27-28 Apply(
                                @27-28 Var {
                                    module_name: "Task",
                                    ident: "await",
                                },
                                [
                                    @27-28 Var {
                                        module_name: "",
                                        ident: "b",
                                    },
                                    @27-28 Closure(
                                        [
                                            @23-24 Identifier {
                                                ident: "a",
                                            },
                                        ],
                                        @38-42 Apply(
                                            @38-42 Var {
                                                module_name: "",
                                                ident: "c",
                                            },
                                            [
                                                @41-42 Var {
                                                    module_name: "",
                                                    ident: "a",
                                                },
                                            ],
                                            Space,
                                        ),
                                    ),
                                ],
                                BangSuffix,
                            ),
                        ),
                    ],
                },
                @48-49 Var {
                    module_name: "",
                    ident: "x",
                },
            ),
        ),
    ],
}
