crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__nested_simple.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-22,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-3 Identifier {
                ident: "run",
            },
            @0-22 Apply(
                @0-22 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    Var {
                        module_name: "",
                        ident: "nextMsg",
                    },
                    @0-22 Closure(
                        [
                            Identifier {
                                ident: "#!a0",
                            },
                        ],
                        @0-22 Apply(
                            @0-22 Var {
                                module_name: "",
                                ident: "line",
                            },
                            [
                                @13-21 ParensAround(
                                    Var {
                                        module_name: "",
                                        ident: "#!a0",
                                    },
                                ),
                            ],
                            Space,
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
