crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__simple_double_question.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-85,
    ],
    space_before: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
    ],
    space_after: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 1 },
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-69 Apply(
                @11-69 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @11-69 Defs(
                        Defs {
                            tags: [
                                EitherIndex(2147483648),
                            ],
                            regions: [
                                @11-69,
                            ],
                            space_before: [
                                Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                            ],
                            space_after: [
                                Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                            ],
                            spaces: [],
                            type_defs: [],
                            value_defs: [
                                AnnotatedBody {
                                    ann_pattern: @11-69 Identifier {
                                        ident: "#!0_stmt",
                                    },
                                    ann_type: @11-69 Apply(
                                        "",
                                        "Task",
                                        [
                                            @11-69 Record {
                                                fields: [],
                                                ext: None,
                                            },
                                            @11-69 Inferred,
                                        ],
                                    ),
                                    lines_between: [],
                                    body_pattern: @11-69 Identifier {
                                        ident: "#!0_stmt",
                                    },
                                    body_expr: @11-69 Apply(
                                        @11-69 Var {
                                            module_name: "",
                                            ident: "line",
                                        },
                                        [
                                            @11-56 Apply(
                                                @47-56 Var {
                                                    module_name: "Num",
                                                    ident: "toStr",
                                                },
                                                [
                                                    @11-39 Apply(
                                                        @24-39 When(
                                                            @24-32 Var {
                                                                module_name: "Str",
                                                                ident: "toU8",
                                                            },
                                                            [
                                                                WhenBranch {
                                                                    patterns: [
                                                                        @24-32 Apply(
                                                                            @24-32 Tag(
                                                                                "Ok",
                                                                            ),
                                                                            [
                                                                                @24-32 Identifier {
                                                                                    ident: "success_BRANCH1_24_32",
                                                                                },
                                                                            ],
                                                                        ),
                                                                    ],
                                                                    value: @24-32 Var {
                                                                        module_name: "",
                                                                        ident: "success_BRANCH1_24_32",
                                                                    },
                                                                    guard: None,
                                                                },
                                                                WhenBranch {
                                                                    patterns: [
                                                                        @36-39 Apply(
                                                                            @24-32 Tag(
                                                                                "Err",
                                                                            ),
                                                                            [
                                                                                @36-39 Underscore(
                                                                                    "",
                                                                                ),
                                                                            ],
                                                                        ),
                                                                    ],
                                                                    value: @36-39 Num(
                                                                        "255",
                                                                    ),
                                                                    guard: None,
                                                                },
                                                            ],
                                                        ),
                                                        [
                                                            @11-16 Str(
                                                                PlainLine(
                                                                    "123",
                                                                ),
                                                            ),
                                                        ],
                                                        BinOp(
                                                            Pizza,
                                                        ),
                                                    ),
                                                ],
                                                BinOp(
                                                    Pizza,
                                                ),
                                            ),
                                        ],
                                        BinOp(
                                            Pizza,
                                        ),
                                    ),
                                },
                            ],
                        },
                        @11-69 Var {
                            module_name: "",
                            ident: "#!0_stmt",
                        },
                    ),
                    @11-69 Closure(
                        [
                            @11-69 Underscore(
                                "#!stmt",
                            ),
                        ],
                        @75-85 Apply(
                            @75-82 Var {
                                module_name: "Task",
                                ident: "ok",
                            },
                            [
                                @83-85 Record(
                                    [],
                                ),
                            ],
                            Space,
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
