crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__simple_pizza.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-73,
    ],
    space_before: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
    ],
    space_after: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 1 },
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-56 Apply(
                @11-56 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @11-56 Defs(
                        Defs {
                            tags: [
                                EitherIndex(2147483648),
                            ],
                            regions: [
                                @11-56,
                            ],
                            space_before: [
                                Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                            ],
                            space_after: [
                                Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                            ],
                            spaces: [],
                            type_defs: [],
                            value_defs: [
                                AnnotatedBody {
                                    ann_pattern: @11-57 Identifier {
                                        ident: "#!0_stmt",
                                    },
                                    ann_type: @11-57 Apply(
                                        "",
                                        "Task",
                                        [
                                            @11-57 Record {
                                                fields: [],
                                                ext: None,
                                            },
                                            @11-57 Inferred,
                                        ],
                                    ),
                                    lines_between: [],
                                    body_pattern: @11-57 Identifier {
                                        ident: "#!0_stmt",
                                    },
                                    body_expr: @11-56 Apply(
                                        @11-56 Var {
                                            module_name: "",
                                            ident: "line",
                                        },
                                        [
                                            @11-44 Apply(
                                                @26-36 Var {
                                                    module_name: "Str",
                                                    ident: "concat",
                                                },
                                                [
                                                    @11-18 Str(
                                                        PlainLine(
                                                            "hello",
                                                        ),
                                                    ),
                                                    @37-44 Str(
                                                        PlainLine(
                                                            "world",
                                                        ),
                                                    ),
                                                ],
                                                BinOp(
                                                    Pizza,
                                                ),
                                            ),
                                        ],
                                        BinOp(
                                            Pizza,
                                        ),
                                    ),
                                },
                            ],
                        },
                        @11-56 Var {
                            module_name: "",
                            ident: "#!0_stmt",
                        },
                    ),
                    @11-56 Closure(
                        [
                            @11-57 Underscore(
                                "#!stmt",
                            ),
                        ],
                        @63-73 Apply(
                            @63-70 Var {
                                module_name: "Task",
                                ident: "ok",
                            },
                            [
                                @71-73 Record(
                                    [],
                                ),
                            ],
                            Space,
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
